--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Danila Sidorkin <sidorkin@saritasa.com>",
   "license": "MIT",
   "peerDependencies": {
-    "tslint": "~5.8.0",
-    "codelyzer": "~4.2.1"
+    "tslint": "^5.17.0",
+    "codelyzer": "^5.1.0"
   }
 }
