--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@saritasa/tslint-config-angular",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Saritasa's shareable config for tslint of Angular X projects",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "tslint",
-    "tslint-config",
-    "saritasa"
+    "eslint",
+    "eslintconfig",
+    "typescript",
+    "tslint"
   ],
   "repository": {
     "type": "git",
@@ -18,8 +19,12 @@
   "author": "Danila Sidorkin <sidorkin@saritasa.com>",
   "license": "MIT",
   "peerDependencies": {
-    "tslint": "^5.17.0",
-    "codelyzer": "^5.1.0",
-    "typescript": "^3.0.0"
+    "eslint-plugin-import": "~2.18.2",
+    "eslint-plugin-jsdoc": "~18.1.6",
+    "typescript-eslint": "~0.0.1-alpha.0",
+    "eslint": "~6.8.0",
+    "typescript": "~3.7.2",
+    "@typescript-eslint/eslint-plugin": "~2.9.0",
+    "@typescript-eslint/parser": "~2.9.0"
   }
 }
